--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,6 +22,10 @@ body {
   color: white;
   font-weight: 500;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .normalText {
@@ -47,6 +51,8 @@ body {
   background: linear-gradient(to right, #3a2edc, #f60637);
 }
 
-.eventFormBg {
-  
+.eventDiv{
+  background: #0f111a;
+  border-radius: 25px;
+  border: 3px solid white
 }
