--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,6 +26,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
+}
+
+.outlineButton:hover{
+  background: black;
+  transform: scale(1.05);
 }
 
 .normalText {
